--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Figma Component Analyzer</title>
+  <title>Figma Components Analyzer</title>
+  <link rel="stylesheet" href="public/css/reset.css">
   <link rel="stylesheet" href="public/css/style.css">
   <script src="public/js/library.js"></script>
   <script src="public/js/client.js"></script>
@@ -14,6 +15,7 @@
   <div class="Content">
 
     <div class="Form">
+      <h2>Figma Components Analyzer</h2>
       <form id="apiForm">
         <input type="text" id="token" placeholder="Enter Figma personal access token" required>
         <input type="text" id="fileKey" placeholder="Enter Figma file key" required>
@@ -25,9 +27,7 @@
       </form>
 
     </div>
-
     <div class="Results" id="result"></div>
-
   </div>
 </body>
 
