--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <div class="Content">
 
     <div class="Form">
-      <h2>Figma Components Analyzer</h2>
+      <h2>Figma<br />Component<br />Analyzer</h2>
       <form id="apiForm">
-        <input type="text" id="token" placeholder="Enter Figma personal access token" required>
-        <input type="text" id="fileKey" placeholder="Enter Figma file key" required>
+        <input type="text" id="token" placeholder="Figma Personal Access Token" required>
+        <input type="text" id="fileKey" placeholder="Figma File Key" required>
         <button type="submit">Analyze</button>
 
         <div id="controls" style="display: none;">
