--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div class="Content">
 
     <div class="Form">
-      <h2>Figma<br />Component<br />Analyzer</h2>
+      <h2>Figma<br />Components<br />Analyzer</h2>
       <form id="apiForm">
         <input type="text" id="token" placeholder="Figma Personal Access Token" required>
         <input type="text" id="fileKey" placeholder="Figma File Key" required>
