--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Figma Components Analyzer</title>
   <link rel="stylesheet" href="public/css/reset.css">
   <link rel="stylesheet" href="public/css/style.css">
-  <script src="https://cdn.jsdelivr.net/npm/ejs@3.1.10/ejs.min.js"></script>
+  <script src="public/js/ejs.min.js"></script>
   <script src="public/js/library.js"></script>
   <script src="public/js/base.js"></script>
   <script src="public/js/property.js"></script>
